tests/reference/asr-modulo_01-b82bee9.stderr
semantic error: Second argument of modulo cannot be 0
 --> tests/errors/modulo_01.f90:2:14
  |
2 |     print *, modulo(1, 0)
  |              ^^^^^^^^^^^^ 
